# soft_renderer

./: CMakeLists.txt
include/core/: camera.h  directional_light.h  displayer.h  engine.h  framebuffer.h  input_handler.h  material.h  mesh.h  model.h  rasterizer.h  render_state.h  render_states.h  renderer.h  resource_manager.h  scene.h  shader.h  texture.h  transform.h  uniform.h  uniforms.h  vertex.h
include/maths/: constant.h  geometry.hpp  matrix.hpp  vector.hpp
include/utils/: model_importer.h  print.hpp
src/: main.cpp
src/core/: buffer.hpp  camera.cpp  camera.hpp  displayer.cpp  engine.cpp  framebuffer.cpp  input_handler.cpp  mesh.hpp  model.cpp  rasterizer.cpp  renderer.cpp  renderer.hpp  resource_manager.cpp  scene.cpp  shader.cpp  vertex.hpp
src/maths/: matrix.cpp  matrix.hpp  vector.hpp
src/shaders/: blinn_phong_f.cpp  blinn_phong_v.cpp
src/utils/: model_importer.cpp
